# tutorials

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  binance.py  changelog.txt  dash_app.py  docker-compose.yml  invoke.yaml  ollama.API.ipynb  ollama.API.md  ollama.example.ipynb  ollama.example.md  ollama.example.py  ollama.utils.py  ollama_API.py  pytest.ini  repo_config.py  repo_config.yaml  requirements.txt  streamlit_app.py  tasks.py
.github/: gitleaks-rules.toml
.github/workflows/: gitleaks.yml
DATA605/: README.md  TutorialsTask76_automate_collaborator_invitations_from_gsheet.py  project_description.py
DATA605/Spring2024/Spring2024_Streaming_Word_Count_with_Apache_Spark_Streaming/: spring2024_streaming_word_count_with_apache_spark_streaming.py
DATA605/Spring2025/projects/: Data_605_Project.ipynb
DATA605/projects/: DATA605_Projects.md
DATA605/tutorial_template/: README.md  template.API.md  template.API.py  template.example.md  template.example.py
DATA605/tutorial_template/docker_data605_style/: bashrc
causal_automl/: download_eia_metadata.py  download_fred_data.py  eda_utils.py
causal_automl/notebooks/: TutorTask235_Exploratory_analysis_of_FRED_metadata.ipynb  TutorTask235_Exploratory_analysis_of_FRED_metadata.py  TutorTask236_EDA_gridstatus_metadata.ipynb  TutorTask236_EDA_gridstatus_metadata.py
data/: fallback_1m.csv  fresh_btc_data.csv  historical_btc_data.csv
dev_scripts_tutorials/thin_client/: setenv.sh  setenv.tutorials.sh  tmux.py  tmux.tutorials.py
devops/: __init__.py
devops/compose/: __init__.py
devops/docker_build/: create_users.sh  dev.Dockerfile  dockerignore.dev  dockerignore.prod  etc_sudoers  fstab  install_cprofile.sh  install_dind.sh  install_os_packages.sh  install_publishing_tools.sh  install_python_packages.sh  pip_list.txt  poetry.toml  pyproject.toml  update_os.sh  utils.sh
devops/docker_run/: bashrc  docker_setenv.sh  entrypoint.sh  run_jupyter_server.sh  test_setup.sh
devops/env/: default.env
docker_common/: utils.sh
docker_data605_style/: docker_bash.sh
docs/: all.evaluate_tools.how_to_guide.md  all.how_write_tutorials.how_to_guide.md
llms/: tutorial-openai_new.ipynb
pymc/: changelog.txt  repo_config.py  tasks.py
pymc/devops/docker_build/: dev.Dockerfile  install_os_packages.sh  install_python_packages.sh  update_os.sh
pymc/devops/docker_run/: docker_setenv.sh  entrypoint.sh  run_jupyter_server.sh
sandbox/DATA605_Spring2025/: README.md
tutorial_asana/: asana.API.md  changelog.txt  pip_list.txt  poetry.lock.out  repo_config.py  repo_config.yaml  tasks.py  tutorial_asana.ipynb  tutorial_asana.md  tutorial_asana.py  utils.py
tutorial_asana/devops/env/: default.env
tutorial_data_science/: repo_config.py  repo_config.yaml
tutorial_data_science/devops/docker_build/: install_dind.sh  pyproject.toml
tutorial_github/: changelog.txt  github.API.ipynb  github.API.md  github.API.py  github.example.md  github_api_tutorial.ipynb  invoke.yaml  repo_config.yaml  utils.py
tutorial_github_causify_style/: README.md  changelog.txt  github.API.ipynb  github.API.md  github.API.py  github.example.py  github_utils.py  pip_list.txt  poetry.lock.out  repo_config.yaml
tutorial_github_data605_style/: Dockerfile  README.md  bashrc  docker_clean.sh  docker_exec.sh  docker_push.sh  etc_sudoers  github.API.ipynb  github.example.md  install_jupyter_extensions.sh  requirements.txt
tutorial_langchain/: .dockerignore  README.md  README.txt  changelog.txt  langchain.API.ipynb  langchain.API.md  langchain.API.py  langchain.example.ipynb  langchain.example.md  langchain.example.py  langchain_utils.py  repo_config.py  repo_config.yaml  tutorial_langchain.ipynb  tutorial_langchain.py
tutorial_langchain/devops/docker_build/: create_users.sh  pip_list.txt  pyproject.toml  update_os.sh
tutorial_langchain/example_docs/: README.md  code_organization.md
tutorial_langchain/langchain/: langchain.API.ipynb  langchain.API.md  langchain.API.py  langchain.example.ipynb  langchain.example.md  langchain.example.py
tutorial_langchain/src/: build_a_chatbot_for_documentation.ipynb  build_a_chatbot_for_documentation.md  build_a_chatbot_for_documentation.py  tutorial_langchain_api.ipynb  tutorial_langchain_api.md  tutorial_langchain_api.py
tutorial_neo4j/: Tutorial_neo4j.ipynb  Tutorial_neo4j.py  changelog.txt  conftest.py  neo4j.API.md  neo4j.example.ipynb  neo4j.example.md  neo4j.example.py  pytest.ini  repo_config.py  repo_config.yaml  tasks.py
tutorial_neo4j/devops/docker_build/: dev.Dockerfile  install_os_packages.sh  install_publishing_tools.sh  pip_list.txt  prod.Dockerfile  pyproject.toml
tutorial_neo4j/neo4j/: neo4j.API.ipynb  neo4j.API.md  neo4j.API.py  neo4j.example.ipynb  neo4j.example.md  neo4j.example.py
tutorial_openai/: changelog.txt  repo_config.py  repo_config.yaml  tasks.py  tutorial-hopenai_new.ipynb  tutorial-hopenai_new.md  tutorial-openai-new.md  tutorial-openai_new.ipynb
tutorial_openai/openai/: tutorial-openai-new.md
tutorial_prophet/: __init__.py  pip_list.txt  poetry.lock.out  pytest.ini  repo_config.py  repo_config.yaml  tasks.py
tutorial_prophet/devops/docker_build/: install_os_packages.sh  install_python_packages.sh  pip_list.txt  pyproject.toml  utils.sh
tutorial_prophet/src/: Prophet.ipynb  Prophet.py  tutorial_prophet.py
tutorial_pymc/: conftest.py  lib_tasks.py  repo_config.py  repo_config.yaml
tutorial_pymc/devops/: __init__.py
tutorial_pymc/devops/docker_build/: dev.Dockerfile  dockerignore.prod  fstab  install_os_packages.sh  install_python_packages.sh  poetry.toml  pyproject.toml
tutorial_pymc/notebooks/: tutorial_arviz.ipynb  tutorial_xarray.ipynb
tutorial_template/: template.API.ipynb  template.API.py  template.example.ipynb
tutorial_tensorflow/: changelog.txt  linter_output.txt  pip_list.txt  poetry.lock.out  repo_config.py  repo_config.yaml  tasks.py
tutorial_tensorflow/devops/docker_build/: dev.Dockerfile  install_publishing_tools.sh  install_python_packages.sh  pyproject.toml
tutorial_tensorflow/src/: tutorial_tensorflow.ipynb  tutorial_tensorflow.py
(+312 files in other folders)
