[tool.poetry]
name = "amp"
version = "0.1.0"
description = ""
authors = ["GP Saggese <gp@kaizen-tech.io>"]

[tool.poetry.dependencies]
async_solipsism = ">= 0.3"
boto3 = "*"
invoke = "*"
joblib = "*"
jsonpickle = "*"
jupyter = "*"
# By default we install and enable `Jupytext` plugin in `Jupyter` notebook
# to get automatically `.py` paired with `.ipynb`.
jupytext = "*"
markdown = "*"
matplotlib = "*"
moto = "*"
networkx = "*"
numpy = "*"
openai = "*"
pandas = ">= 2.1.1"
psutil = "*"
psycopg2-binary = "*"
pyarrow = "*"
pytest = "*"
pytest-cov = "*"
pytest-instafail = "*"
pytest-rerunfailures = "*"
pytest-timeout = "*"
pytest-xdist = "*"
python = ">= 3.12"
python-dotenv = "*"
requests = "*"
s3fs = "*"
scikit-learn = "*"
seaborn = "*"
statsmodels = "*"
tqdm = "*"
unstructured = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
