[tool.poetry]
name = "amp"
version = "0.1.0"
description = ""
authors = ["GP Saggese <gp@kaizen-tech.io>"]

[tool.poetry.dependencies]
jupyter = "*"
jupytext = "*"
matplotlib = "*"
numpy = "*"
openai = "*"
pandas = ">= 2.1.1"
psutil = "*"               # Is this needed?
pyarrow = "*"
pytest = "*"
pytest-cov = "*"
pytest-instafail = "*"
pytest-rerunfailures = "*"
pytest-timeout = "*"
pytest-xdist = "*"
python = ">= 3.12"
python-dotenv = "*"        # Is this needed?
requests = "*"             # Is this needed?
scikit-learn = "*"
seaborn = "*"
statsmodels = "*"
tqdm = "*"
invoke = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
