[tool.poetry]
name = "amp"
version = "0.1.0"
description = ""
authors = ["GP Saggese <gp@kaizen-tech.io>"]

[tool.poetry.dependencies]
chromadb = "*"
faiss-cpu = "*"
invoke = "*"
jupyter = "*"
jupytext = "*"
langchain = "*"
langchain-core = "*"
langchain-community = "*"
langchain-openai = "*"
matplotlib = "*"
numpy = "*"
openai = "*"
pandas = ">= 2.1.1"
pyarrow = "*"
pytest = "*"
pytest-cov = "*"
pytest-instafail = "*"
pytest-rerunfailures = "*"
pytest-timeout = "*"
pytest-xdist = "*"
python = ">= 3.12, < 4.0"
seaborn = "*"
scikit-learn = "*"
s3fs = "*"
tqdm = "*"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
