[tool.poetry]
name = "tutorial_prophet"
version = "0.1.0"
description = ""
authors = ["GP Saggese <gp@kaizen-tech.io>"]

[tool.poetry.dependencies]
invoke = "*"
jupyter = "*"
jupytext = "*"
matplotlib = "*"
numpy = "*"
pandas = ">= 2.1.1"
plotly = "*"
prophet = "*"
psutil = "*"               # Is this needed?
pyarrow = "*"
pytest = "*"
pytest-cov = "*"
pytest-instafail = "*"
pytest-rerunfailures = "*"
pytest-timeout = "*"
pytest-xdist = "*"
python = ">= 3.12, < 4.0"
python-dotenv = "*"        # Is this needed?
requests = "*"             # Is this needed?
scikit-learn = "*"
seaborn = "*"
tqdm = "*"
s3fs = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
