[tool.poetry]
name = "amp"
version = "0.1.0"
description = ""
authors = ["GP Saggese <gp@kaizen-tech.io>"]

[tool.poetry.dependencies]
h5py = "*"
invoke = "*"
jupyter = "*"
jupytext = "*"
matplotlib = "*"
numpy = "*"
pandas = ">= 2.1.1"
psutil = "*"               # Is this needed?
pyarrow = "*"
#pymc = "*"
pymc = "== 5.18.2"         # https://github.com/pymc-devs/pymc/issues/7592
pytest = "*"
pytest-cov = "*"
pytest-instafail = "*"
pytest-rerunfailures = "*"
pytest-timeout = "*"
pytest-xdist = "*"
python = ">=3.10,<3.13"    # To make pytensor happy.
python-dotenv = "*"        # Is this needed?
requests = "*"             # Is this needed?
s3fs = "*"
scikit-learn = "*"
seaborn = "*"
statsmodels = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
